# cs519v_sample_rs

./: Cargo.toml  README.md
src/: main.rs  render.rs
src/shaders/: mod.rs  sample.frag
